# ndl-tools

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml
.archive/: differ.py  differ_test.py
.github/workflows/: publish-package.yml  python-app.yml  test-package.yml
src/ndl_tools/: __init__.py  comparer.py  differ.py  formatter.py  iterable_sorter.py  list_sorter.py  normalizer.py  path_matcher.py  selector.py  sorter.py
test/: comparer_test.py  differ_test.py  differ_test.py_  docs_example_test.py  docs_example_test.py_  formatter_test.py  functional_test.py  list_sorter_test.py  matcher_test.py  normalizer_test.py  selector_test.py  selector_test.py_  sorter_test.py
test/data/: 1-left-response.json  1-right-response.json  left.toml  right.toml
