[tool.poetry]
name = "ndl-tools"
version = "0.0.1"
description = "Tools for sorting and diffing nested dictionaries and lists."
authors = ["Nate Atkins <atkinsnw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = "^5.2.1"
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
