[tool.poetry]
name = "ndl-tools"
version = "0.0.17"
description = "Tools for sorting and diffing nested dictionaries and lists."
authors = ["Nate Atkins <atkinsnw@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nathan5280/ndl-tools"
repository = "https://github.com/nathan5280/ndl-tools"
keywords = ["api", "testing", "diff"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing :: Unit",
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

